# rs_verify_tests

./: .gitignore  Cargo.toml  README.md
examples/basic_usage/: .gitignore  Cargo.toml  main.rs
examples/basic_usage/snapshot_tests/: test_new.accepted.json
examples/basic_usage/src/: lib.rs
src/: lib.rs
tests/: Cargo.toml
tests/snapshot_results/: ensure_matching_snapshot_file_works.accepted.json  ensure_mismatched_snapshot_panics.received.json
tests/src/: lib.rs
verify-review/: Cargo.toml
verify-review/src/: main.rs
verify-tests/: Cargo.toml
verify-tests/src/: lib.rs
