[package]
name = "verify-review"
version = "0.1.0"
edition = "2021"
description = "Interactively review and verify tests."
authors = ["Shawn Eddy <ymiseddy@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
sha256 = "1.1.3"
inquire = "0.6.2"
clap = { version = "4.2.7", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3 


